fix: fixed scrollbar color issue

--- a/src/pages/content/style.scss
+++ b/src/pages/content/style.scss
@@ -118,6 +118,34 @@
   height: 600px;
   margin-bottom: 30px;
   overflow-y: auto;
+
+}
+
+.access-rules-list-container {
+  scrollbar-width: thin;
+  /* For Firefox */
+  scrollbar-color: #888 #f4f4f4;
+  /* Scrollbar thumb and track colors for Firefox */
+}
+
+/* For Webkit browsers like Chrome, Edge, Safari */
+.access-rules-list-container::-webkit-scrollbar {
+  width: 10px;
+  /* Scrollbar width */
+  height: 10px;
+  /* Scrollbar height (for horizontal scrollbars) */
+}
+
+.access-rules-list-container::-webkit-scrollbar-thumb {
+  background-color: #888;
+  /* Scrollbar thumb color */
+  border-radius: 4px;
+  /* Rounded corners for the thumb */
+}
+
+.access-rules-list-container::-webkit-scrollbar-track {
+  background-color: #f4f4f4;
+  /* Scrollbar track color */
 }
 
 .access-rules-label-description {
